--- a/src/main/resources/static/ueditor/config.json
+++ b/src/main/resources/static/ueditor/config.json
@@ -1,7 +1,7 @@
 /* 前后端通信相关的配置,注释只允许使用多行方式 */
 {
     /* 上传文件存储根路径 */
-    "basePath":"~/",
+    "basePath":"/usr/local/app/inkjetpic/",
     /* 上传图片配置项 */
     "imageActionName": "uploadimage", /* 执行上传图片的action名称 */
     "imageFieldName": "upfile", /* 提交的图片表单名称 */
@@ -10,7 +10,7 @@
     "imageCompressEnable": true, /* 是否压缩图片,默认是true */
     "imageCompressBorder": 1600, /* 图片压缩最长边限制 */
     "imageInsertAlign": "none", /* 插入的图片浮动方式 */
-    "imageUrlPrefix": "", /* 图片访问路径前缀 */
+    "imageUrlPrefix": "/ueditorfiles", /* 图片访问路径前缀 */
     "imagePathFormat": "/upload/image/{yyyy}{mm}{dd}/{time}{rand:6}", /* 上传保存路径,可以自定义保存路径和文件名格式 */
                                 /* {filename} 会替换成原文件名,配置这项需要注意中文乱码问题 */
                                 /* {rand:6} 会替换成随机数,后面的数字是随机数的位数 */
