--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,36 +2,29 @@ web:
   upload-path: /usr/local/app/inkjetpic
 spring:
   datasource:
-      url: jdbc:mysql://47.104.111.241:3306/inkjet?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://47.104.111.241:3306/inkjet?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
       password: root
       driver-class-name: com.mysql.jdbc.Driver
       platform: mysql
       type: com.alibaba.druid.pool.DruidDataSource
-      # 下面为连接池的补充设置，应用到上面所有数据源中
-      # 初始化大小，最小，最大
-      initialSize: 1
-      minIdle: 3
-      maxActive: 20
-      # 配置获取连接等待超时的时间
-      maxWait: 60000
-      # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
-      timeBetweenEvictionRunsMillis: 60000
-      # 配置一个连接在池中最小生存的时间，单位是毫秒
-      minEvictableIdleTimeMillis: 30000
-      validationQuery: select 'x'
-      testWhileIdle: true
-      testOnBorrow: false
-      testOnReturn: false
-      # 打开PSCache，并且指定每个连接上PSCache的大小
-      poolPreparedStatements: true
-      maxPoolPreparedStatementPerConnectionSize: 20
-      # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
-      filters: stat,wall,log4j
-      # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
-      connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-      # 合并多个DruidDataSource的监控数据
-      #useGlobalDataSourceStat: true
+      druid:
+        test-while-idle: true
+        test-on-borrow: false
+        test-on-return: false
+        time-between-eviction-runs-millis: 60000
+        min-evictable-idle-time-millis: 300000
+        initial-size: 3
+        min-idle: 3
+        max-active: 50
+        max-wait: 60000
+        validation-query: select 'x'
+        pool-prepared-statements: true
+        max-pool-prepared-statement-per-connection-size: 20
+        connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+        filter:
+          commons-log:
+            connection-logger-name: stat,wall,log4j
 
   jpa:
     # 配置 DBMS 类型
