--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,12 @@ web:
   upload-path: /usr/local/app/inkjetpic
 spring:
   datasource:
-      url: jdbc:mysql://47.104.111.241:3306/inkjet?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
+      #url: jdbc:mysql://47.104.111.241:3306/inkjet?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
+      #username: root
+      #password: root
+      url: jdbc:mysql://150.109.32.60:3306/inkjet?autoReconnect=true&useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: root
+      password: Sino.best@2018
       driver-class-name: com.mysql.jdbc.Driver
       platform: mysql
       type: com.alibaba.druid.pool.DruidDataSource
